k8s/base/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: mais-saude-app
  ports:
    - port: 80
      targetPort: 8080
